# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.218 2006/01/31 03:21:58 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  30 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  if user doesn't add any interfaces for post-install, confirm

  13 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  add warning to ExtraPackages about fetch-restricted and interactive ebuilds

  7 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  ExtraPackages.py: Fix bug where leaving and going back to a screen causes
  package to be listed twice.  add support for detecting GRP packages from
  grppkgs.txt on the livecd only if the grp checkbox is checked on the stage
  screen.  Add new property called 'DisplayName' to Package object for grp
  support.
  
  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  warn user when choosing the GRP option and not Dynamic
  load extra kernel args on Bootloader.py

  5 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  Users.py: disable password fields if loading from profile, fix issue where
  if uid is blank, get error when loading from profile.  fix issue where
  password box is disabled after modifying and accepting changes for a user
  loaded from a profile. re-enable switching notebook page when selecting user
  from list.  Move buttons to upper right.
  
  4 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  Timezone.py: fix loading of timezones from installprofile
  due to race condition.
  
  2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  fix to hopefully auto-scroll properly
  scroll to bottom of output tab on failure

  19 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  add install_mode support to Misc tab of CC screen

  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  change call to .get_active_text()
  set arch properly in CF

  4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added StartupServices screen