@@ -1,8 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.218 2006/01/31 03:21:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.219 2006/02/04 20:01:58 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  4 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  initial working help
+  help text for Welcome
+  add TextBufferMarkup.py
 
   30 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   if user doesn't add any interfaces for post-install, confirm
